--- a/src/app/graphUI.html
+++ b/src/app/graphUI.html
@@ -82,19 +82,19 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Branch name :</label>
                         <div class="col-sm-3">
-                            <input class="form-control" type="text" placeholder="branch name" value="{{branch.name}}">
+                            <input #name class="form-control" type="text" placeholder="branch name" value="{{branch.name}}">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Color :</label>
                         <div class="col-sm-3">
-                            <input class="form-control" type="text" id="color" placeholder="color"  value="{{branch.color}}"></input>
+                            <input #color class="form-control" type="text" id="color" placeholder="color"  value="{{branch.color}}"></input>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success btn-lg" type="button">Validate</button>
+                <button class="btn btn-success btn-lg" (click)="add_branch(name.value, color.value)" type="button">Validate</button>
                 <button class="btn btn-default btn-lg" type="button" (click)="branchmodalstate=false;">Cancel</button>
             </div>
         </div>
