--- a/src/app/graphUI.html
+++ b/src/app/graphUI.html
@@ -76,25 +76,39 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3>New branch</h3>
+                    <h3>{{branch.name}}</h3>
                 </div><div class="modal-body">
                 <form class="form-horizontal">
                     <div class="form-group">
+                        <label class="col-sm-3 control-label">Branch Type :</label>
+                        <div class="col-sm-3">
+                            <div class="dropdown">
+                            <button #type value="{{branch.type}}" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown" >
+                                {{branch.type}}
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" >
+                                <li *ng-for="#type of branch.types" (click)="branch.type = type"><a>{{type}}</a></li>
+                            </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-sm-3 control-label">Branch name :</label>
                         <div class="col-sm-3">
-                            <input #name class="form-control" type="text" placeholder="branch name" value="{{branch.name}}">
+                            <input #name class="form-control" type="text" placeholder="branch name" value="{{branch.name}}" (keyup)="branch.name = name.value">
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Color :</label>
                         <div class="col-sm-3">
-                            <input #color class="form-control" type="text" id="color" placeholder="color"  value="{{branch.color}}"></input>
+                            <input #color class="form-control" type="text" id="color" placeholder="color"  value="{{branch.color}}" (keyup)="branch.color = color.value"></input>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success btn-lg" (click)="add_branch(name.value, color.value)" type="button">Validate</button>
+                <button class="btn btn-success btn-lg" *ng-if="branches.indexOf(branch) == -1" (click)="add_branch(name.value, color.value,type.value)" type="button">Create</button>
                 <button class="btn btn-default btn-lg" type="button" (click)="branchmodalstate=false;">Cancel</button>
             </div>
         </div>
