delete node front end et back end OK branch delete backend ok

--- a/src/app/graphUI.html
+++ b/src/app/graphUI.html
@@ -41,7 +41,7 @@
                                 <button class="btn btn-success btn-lg" type="button" (click)="add_node()"> 
                                     <img src="lib/img/add_child.png" >
                                 </button>
-                                <button class="btn btn-danger btn-lg" type="button" (click)="delete_node_and_son()"> 
+                                <button class="btn btn-danger btn-lg" type="button"> 
                                     <img src="lib/img/delete_node_and_son.png"> 
                                 </button>
                                 <button class="btn btn-danger btn-lg" type="button" (click)="delete_node()"> 
