--- a/src/app/graphUI.html
+++ b/src/app/graphUI.html
@@ -29,7 +29,7 @@
                         <div class="col-md-6">
                             <h3 *ng-if="!title_state" (dblclick)="title_state=true;">{{node.name}}</h3>
                             <input #node_name *ng-if="title_state" class="form-control" value="{{node.name}}" placeholder="Node Name"                                       
-                                (keyup.enter)="node.name = update_node(node_name.value);" 
+                                (keyup.enter)="update_node(node_name.value);" 
                                 (blur)="update_node(node_name.value);"
                                 >
                         </div>
@@ -115,3 +115,29 @@
         </div>
     </div>
 </div>
+ <div class="modal fade in" *ng-if="edgemodalstate" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" id="{{edgemodal}}" style="display:block; padding-left:15px;" >
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3 *ng-if="!title_state" (dblclick)="title_state=true;">{{edge.name}}</h3>
+                            <input #edge_name *ng-if="title_state" class="form-control" value="{{edge.name}}" placeholder="Edge Name"                                       
+                                (keyup.enter)="update_edge(edge_name.value);" 
+                                (blur)="update_edge(edge_name.value);"
+                                >
+                        </div>
+                        <div class="col-md-6">
+                            <h3 class='pull-right'>{{"["+ edge.type +"]"}}</h3>
+                        </div>  
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <button class="btn btn-danger btn-lg" type= "button" (click)="delete_edge()">Delete edge</button>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-default" (click)="edgemodalstate=false;">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
