--- a/src/app/graphUI.html
+++ b/src/app/graphUI.html
@@ -19,6 +19,14 @@
                     </li>
                 </ul>
             </div>
+            <ul class="nav navbar-nav navbar-right">   
+                <li><a>LogIn</a></li>
+                <li><a>LogOut</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <img src="https://avatars.githubusercontent.com/u/8791187?v=3" width="50" height="50" class="img-circle">
+                <img src="https://avatars.githubusercontent.com/u/8791187?v=3" width="50" height="50" class="img-circle">
+            </ul>
         </div>
     </nav> 
     <div class="modal fade in" *ng-if="nodemodalstate" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" id="{{nodemodal}}" style="display:block; padding-left:15px;" >
