--- a/src/lib/css/graph.css
+++ b/src/lib/css/graph.css
@@ -6,3 +6,36 @@ text {
   pointer-events: none;
 }
 
+.imgWrap {
+  position: relative;
+  width:60;
+  height:60;
+}
+
+.imgModifier {
+    text-align: center;
+    padding-top:25px;
+  position: absolute;
+  top: 1px;
+  bottom: 0;
+  left: 18px;
+  right: 25px;
+  height: 73px;
+  background: rgba(29, 106, 154, 0.72);
+  color: #fff;
+    -moz-border-radius: 150px;
+    -webkit-border-radius: 150px;
+    border-radius: 150px;
+  visibility: hidden;
+  opacity: 0;
+
+  /*remove comment if you want a gradual transition between states
+  -webkit-transition: visibility opacity 0.2s;
+  */
+}
+
+
+.imgWrap:hover .imgModifier {
+  visibility: visible;
+  opacity: 1;
+}
